reports/lecture1.log
Traceback (most recent call last):
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/al9001/.conda/envs/ase/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/al9001/.conda/envs/ase/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

#Intialize the code
intialize the code
t=0
#MD loop

do loop while (t=0 to t=t$_{max}$)
	#Calculate forces
	cal forces(xyz, t=t$_n$)
	#Calculate equations of motion
	cal motion(xyz, t=t$_n$)
	t=t+dt
	# Calculate properties
	cal property(xyz, t=t$_n$)
end loop
end
------------------

[0;36m  Input [0;32mIn [6][0;36m[0m
[0;31m    intialize the code[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (735010989.py, line 2)

